# Compilatori-Assigment

1 assigment/: readme.md
1 assigment/source/: AllInOne.cpp
1 assigment/test/: test.cpp  test.ll
Assigment n.4/: README.md
Assigment n.4/src/: LoopFusionPass.cpp
Assigment n.4/test/: manual_fusion.ll  test_fusion.c
Assignment n.1/: readme.md
Assignment n.1/source/: AllInOne.cpp  CMakeLists.txt
Assignment n.2/: Constant Propagation.docx  Dominator Analysis.docx  Very_Busy Expressions.docx
Assignment n.3/: README.md  comandi.txt
Assignment n.3/src/: CMakeLists.txt  LocalOpts.cpp
Assignment n.3/test/: test_licm.c
Assignment n.4/src/: CMakeLists.txt
